# grammar

./: README.md  grammar.cabal  stack.yaml
src/: Grammar.hs  Production.hs
src/Grammar/: Definition.hs  Normalization.hs
test/: Spec.hs
