name:                grammar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/spkirich/grammar#readme
license:             BSD3
license-file:        LICENSE
author:              Sergey Kirichenko
maintainer:          spkirich@gmail.com
copyright:           2022 Sergey Kirichenko
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Grammar, Production
  build-depends:       base >= 4.7 && < 5, containers >= 0.6 && < 1
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite grammar-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    test
  build-depends:     base >= 4.7 && < 5, QuickCheck >= 2.14 && < 3, grammar
  default-language:  Haskell2010

source-repository head
  type:     git
  location: https://github.com/spkirich/grammar
