name: grammar

version:
  0.1.0

synopsis:
  A context-free grammar processing library for Haskell enjoyers

homepage:
  https://github.com/spkirich/grammar#readme

license: BSD3
license-file:
  LICENSE

author:
  Sergey Kirichenko

maintainer:
  spkirich@gmail.com

copyright:
  2022 Sergey Kirichenko

category:
  Formal Language Theory

build-type:
  Simple

extra-source-files:
  README.md

cabal-version:
  >= 1.10

library

  hs-source-dirs:
    src

  exposed-modules: Grammar
    , Grammar.Definition
    , Grammar.Normalization

  build-depends: base >= 4.7 && < 5
    , containers

  default-language:
    Haskell2010

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

test-suite grammar-test

  type: exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    Spec.hs

  build-depends: base >= 4.7 && < 5
    , containers
    , hspec
    , QuickCheck
    , grammar

  default-language:
    Haskell2010

source-repository head

  type: git

  location:
    https://github.com/spkirich/grammar
